# django-webhook-consume

./: .gitignore  README.md  README.txt  setup.cfg  setup.py
django_webhook_consume/: apps.py  helper.py  urls.py  views.py
